--- a/ContactUs.html
+++ b/ContactUs.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" href="a.css">
-<title>Contact Us - Udemy</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact Us - Udemy</title>
+  <link rel="stylesheet" href="a.css">
 </head>
 <body>
 
@@ -21,43 +21,44 @@
     </nav>
   </div>
 </header>
-<hr/>
 
-<!-- Body -->
-<section>
-  <h2>Contact Us</h2>
-  <p>If you have any questions, feedback, or need support, feel free to reach out to us!</p>
+<!-- Main Section -->
+<main>
+  <section>
+    <h2>Contact Us</h2>
+    <p>If you have any questions, feedback, or need support, feel free to reach out to us!</p>
 
-  <h3>Our Address</h3>
-  <p>Udemy Headquarters<br>
-  123 Learning Avenue<br>
-  Pune, Maharashtra, India</p>
+    <h3>Our Address</h3>
+    <p>Udemy Headquarters<br>
+    123 Learning Avenue,<br>
+    Pune, Maharashtra, India</p>
 
-  <h3>Phone</h3>
-  <p>+91 98765 43210</p>
+    <h3>Phone</h3>
+    <p>+91 98765 43210</p>
 
-  <h3>Email</h3>
-  <p>support@udemy.com</p>
+    <h3>Email</h3>
+    <p><a href="mailto:support@udemy.com">support@udemy.com</a></p>
 
-  <h3>Contact Form</h3>
-  <form action="#" method="post">
-    <label for="name">Your Name:</label><br/>
-    <input type="text" id="name" name="name"><br/><br/>
+    <h3>Contact Form</h3>
+    <form action="#" method="post">
+      <label for="name">Your Name:</label><br/>
+      <input type="text" id="name" name="name" required><br/><br/>
 
-    <label for="email">Your Email:</label><br/>
-    <input type="email" id="email" name="email"><br/><br/>
+      <label for="email">Your Email:</label><br/>
+      <input type="email" id="email" name="email" required><br/><br/>
 
-    <label for="subject">Subject:</label><br/>
-    <input type="text" id="subject" name="subject"><br/><br/>
+      <label for="subject">Subject:</label><br/>
+      <input type="text" id="subject" name="subject" required><br/><br/>
 
-    <label for="message">Message:</label><br/>
-    <textarea id="message" name="message" rows="5" cols="40"></textarea><br/><br/>
+      <label for="message">Message:</label><br/>
+      <textarea id="message" name="message" rows="5" cols="40" required></textarea><br/><br/>
 
-    <input type="submit" value="Send Message">
-  </form>
-</section>
+      <input type="submit" value="Send Message">
+    </form>
+  </section>
+</main>
 
-<hr/>
+<!-- Footer -->
 <footer>
   <h2>Explore Top Courses for CS Students</h2>
 
@@ -66,7 +67,7 @@
     <ul>
       <li><a href="HTMLandCSS.html">HTML & CSS</a></li>
       <li><a href="JavaScript.html">JavaScript</a></li>
-      <li><a href="java.html">Python Programming</a></li>
+      <li><a href="python.html">Python Programming</a></li>
       <li><a href="java.html">Java Programming</a></li>
     </ul>
   </div>
@@ -111,5 +112,6 @@
     <span>English</span>
   </div>
 </footer>
+
 </body>
 </html>
