--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Free Online Course - Learn Anything</title>
   <meta name="description" content="Learn anything for free! Explore high-quality free courses on web development, Python, AWS, data structures and more.">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="i.CSS">
+  <link rel="stylesheet" href="i1.css">
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
 </head>
 <body>
 
@@ -21,7 +22,6 @@
     </nav>
   </div>
 </header>
-
 <hr/>
 
 <nav class="b">
@@ -30,61 +30,68 @@
 
 <section class="h">
   <h1>Learn Anything for Free</h1>
-  <p>Start your learning journey with high-bality, free courses</p>
+  <p>Start your learning journey with high-quality, free courses</p>
   <a class="cta-button" href="courses.html">Explore Courses</a>
 </section>
 
-<div class="featured-section">
+<section class="stats">
+  <div class="stats-container">
+    <h2>Why Choose Us?</h2>
+    <div class="stats-items">
+      <div><strong>🎓 20,000+</strong><br>Learners</div>
+      <div><strong>📚 15+</strong><br>Courses</div>
+      <div><strong>🌍 10+</strong><br>Countries</div>
+    </div>
+  </div>
+</section>
+
+<section class="featured-section">
   <h2>Featured Free Courses</h2>
-  <table class="featured-courses">
-    <tr>
-      <td>
-        <a href="HTMLandCSS.html">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/320px-HTML5_logo_and_wordmark.svg.png" alt="HTML & CSS" width="200">
-          <h3>HTML & CSS</h3>
-        </a>
+  <div class="cards-container">
+    <div class="course-card">
+      <a href="HTMLandCSS.html">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/320px-HTML5_logo_and_wordmark.svg.png" alt="HTML & CSS">
+        <h3>HTML & CSS</h3>
         <p>Design responsive, modern web pages.</p>
-      </td>
-      <td>
-        <a href="Python.html">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/320px-Python-logo-notext.svg.png" alt="Python Programming" width="200">
-          <h3>Python Programming</h3>
-        </a>
+      </a>
+    </div>
+    <div class="course-card">
+      <a href="Python.html">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/320px-Python-logo-notext.svg.png" alt="Python Programming">
+        <h3>Python Programming</h3>
         <p>Versatile language great for web, AI, and scripting.</p>
-      </td>
-      <td>
-        <a href="DSA.html">
-          <img src="D.jpg" alt="Data Structures & Algorithms" width="200">
-          <h3>Data Structures & Algorithms</h3>
-        </a>
+      </a>
+    </div>
+    <div class="course-card">
+      <a href="DSA.html">
+        <img src="D.jpg" alt="Data Structures & Algorithms">
+        <h3>Data Structures & Algorithms</h3>
         <p>Build strong CS fundamentals & prepare for interviews.</p>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <a href="SQLDatabases.html">
-          <img src="Q.png" alt="SQL & Databases" width="200">
-          <h3>SQL & Databases</h3>
-        </a>
+      </a>
+    </div>
+    <div class="course-card">
+      <a href="SQLDatabases.html">
+        <img src="Q.png" alt="SQL & Databases">
+        <h3>SQL & Databases</h3>
         <p>Query, store, and manage data effectively.</p>
-      </td>
-      <td>
-        <a href="GitGitHub.html">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Git-logo.svg/320px-Git-logo.svg.png" alt="Git & GitHub" width="200">
-          <h3>Git & GitHub</h3>
-        </a>
+      </a>
+    </div>
+    <div class="course-card">
+      <a href="GitGitHub.html">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Git-logo.svg/320px-Git-logo.svg.png" alt="Git & GitHub">
+        <h3>Git & GitHub</h3>
         <p>Version control and collaboration in projects.</p>
-      </td>
-      <td>
-        <a href="AWSBasics.html">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/Amazon_Web_Services_Logo.svg/320px-Amazon_Web_Services_Logo.svg.png" alt="AWS Basics" width="200">
-          <h3>AWS Basics</h3>
-        </a>
-        <p>Learn the essentials of Amazon Web Services (AWS) to build, deploy, and manage cloud applications with confidence.</p>
-      </td>
-    </tr>
-  </table>
-</div>
+      </a>
+    </div>
+    <div class="course-card">
+      <a href="AWSBasics.html">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/Amazon_Web_Services_Logo.svg/320px-Amazon_Web_Services_Logo.svg.png" alt="AWS Basics">
+        <h3>AWS Basics</h3>
+        <p>Essentials to build and deploy in the cloud.</p>
+      </a>
+    </div>
+  </div>
+</section>
 
 <section class="testimonials">
   <h2>What Our Learners Say</h2>
@@ -115,47 +122,47 @@
   <div class="footer-column">
     <h3>Web & Programming</h3>
     <ul>
-      <li><a href="HTMLandCSS.html">HTML & CSS</a></li>
-      <li><a href="JavaScript.html">JavaScript</a></li>
-      <li><a href="Python.html">Python Programming</a></li>
-      <li><a href="java.html">Java Programming</a></li>
+      <li><a href="HTMLandCSS.html" data-aos="fade-up">HTML & CSS</a></li>
+      <li><a href="JavaScript.html" data-aos="fade-up">JavaScript</a></li>
+      <li><a href="Python.html" data-aos="fade-up">Python Programming</a></li>
+      <li><a href="java.html" data-aos="fade-up">Java Programming</a></li>
     </ul>
   </div>
 
   <div class="footer-column">
     <h3>Data & AI</h3>
     <ul>
-      <li><a href="DSA.html">Data Structures & Algorithms</a></li>
-      <li><a href="ML.html">Machine Learning</a></li>
-      <li><a href="DataScience.html">Data Science</a></li>
-      <li><a href="SQLDatabases.html">SQL & Databases</a></li>
+      <li><a href="DSA.html" data-aos="fade-up">Data Structures & Algorithms</a></li>
+      <li><a href="ML.html" data-aos="fade-up">Machine Learning</a></li>
+      <li><a href="DataScience.html" data-aos="fade-up">Data Science</a></li>
+      <li><a href="SQLDatabases.html" data-aos="fade-up">SQL & Databases</a></li>
     </ul>
   </div>
 
   <div class="footer-column">
     <h3>Cloud & DevOps</h3>
     <ul>
-      <li><a href="AWSBasics.html">AWS Basics</a></li>
-      <li><a href="DockerContainers.html">Docker & Containers</a></li>
-      <li><a href="LinuxEssentials.html">Linux Essentials</a></li>
+      <li><a href="AWSBasics.html" data-aos="fade-up">AWS Basics</a></li>
+      <li><a href="DockerContainers.html" data-aos="fade-up">Docker & Containers</a></li>
+      <li><a href="LinuxEssentials.html" data-aos="fade-up">Linux Essentials</a></li>
     </ul>
   </div>
 
   <div class="footer-column">
     <h3>Other Useful Skills</h3>
     <ul>
-      <li><a href="GitGitHub.html">Git & GitHub</a></li>
-      <li><a href="ProblemSolving.html">Problem Solving</a></li>
+      <li><a href="GitGitHub.html" data-aos="fade-up">Git & GitHub</a></li>
+      <li><a href="ProblemSolving.html" data-aos="fade-up">Problem Solving</a></li>
     </ul>
   </div>
 
   <div class="footer-column">
     <h3>Company</h3>
     <ul>
-      <li><a href="AboutUs.html">About Us</a></li>
-      <li><a href="ContactUs.html">Contact Us</a></li>
-      <li><a href="Terms.html">Terms of Use</a></li>
-      <li><a href="Privacy.html">Privacy Policy</a></li>
+      <li><a href="AboutUs.html" data-aos="fade-up">About Us</a></li>
+      <li><a href="ContactUs.html" data-aos="fade-up">Contact Us</a></li>
+      <li><a href="Terms.html" data-aos="fade-up">Terms of Use</a></li>
+      <li><a href="Privacy.html" data-aos="fade-up">Privacy Policy</a></li>
     </ul>
   </div>
 
@@ -164,6 +171,11 @@
     <span>English</span>
   </div>
 </footer>
+
+<script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 
 </body>
 </html>
