--- a/login.html
+++ b/login.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Log in to continue your learning</title>
-   <link rel="stylesheet" href="login.css">
+  <link rel="stylesheet" href="login.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
 </head>
 <body>
-
 
 <header>
   <div class="header-container">
@@ -24,16 +24,16 @@
 </header>
 <hr/>
 
-<main>
+<main data-aos="fade-up" data-aos-duration="1000">
   <h2><b>Log in to continue your learning journey</b></h2>
-  <form action="#" method="post" onsubmit="return validateForm()">
+  <form action="#" method="post" onsubmit="return validateForm()" novalidate>
     <input type="email" name="email" id="email" placeholder="Email" required>
-    <br>
     <p id="demo1"></p>
+
     <input type="password" name="password" id="pass" placeholder="Enter password" required>
-    <br>
     <p id="demo2"></p>
-    <button type="submit" onclick="return validateForm()">&#x1F4E7 Continue with Email</button>
+
+    <button type="submit">&#x1F4E7 Continue with Email</button>
   </form>
 
   <p>-------- Other Log in options --------</p>
@@ -43,7 +43,7 @@
     <button type="button"><i class="fa-brands fa-apple"></i></button>
   </div>
   <br>
-  <span>Don't have an account? <a href="#">Sign Up</a></span>
+  <span>Don't have an account? <a href="Signup.html">Sign Up</a></span>
   <br>
   <span><a href="#">Log in with Your Organization</a></span>
 </main>
@@ -104,50 +104,35 @@
   </div>
 </footer>
 
-</body>
+<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+<script>AOS.init();</script>
 
 <script>
 function validateForm() {
-  
-
   const email = document.getElementById("email").value.trim();
   const password = document.getElementById("pass").value;
 
-  
   document.getElementById("demo1").textContent = "";
   document.getElementById("demo2").textContent = "";
- 
 
-
-  
   const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
   if (!emailPattern.test(email)) {
     document.getElementById("demo1").textContent = "Enter a valid email address.";
     document.getElementById("demo1").style.color = "red";
+    return false;
   }
 
-  
-  if (password.length < 8) {
-  document.getElementById("demo2").textContent = "Password must be at least 8 characters.";
-  document.getElementById("demo2").style.color = "red";
-} else if (!/[A-Z]/.test(password)) {
-  document.getElementById("demo2").textContent = "Password must contain at least one uppercase letter.";
-  document.getElementById("demo2").style.color = "red";
-} else if (!/[a-z]/.test(password)) {
-  document.getElementById("demo2").textContent = "Password must contain at least one lowercase letter.";
-  document.getElementById("demo2").style.color = "red";
-} else if (!/\d/.test(password)) {
-  document.getElementById("demo2").textContent = "Password must contain at least one number.";
-  document.getElementById("demo2").style.color = "red";
-} else if (!/[^A-Za-z0-9]/.test(password)) {
-  document.getElementById("demo2").textContent = "Password must contain at least one special character.";
-  document.getElementById("demo2").style.color = "red";
-} else if (/\s/.test(password)) {
-  document.getElementById("demo2").textContent = "Password should not contain spaces.";
-  document.getElementById("demo2").style.color = "red";
-}
+  const passwordPattern = /^(?=.*[A-Z])(?=.*[a-z])(?=.*\d)(?=.*[^A-Za-z0-9])[\S]{8,}$/;
+  if (!passwordPattern.test(password)) {
+    document.getElementById("demo2").textContent =
+      "Password must include uppercase, lowercase, number, special char and be 8+ characters.";
+    document.getElementById("demo2").style.color = "red";
+    return false;
+  }
 
+  return true;
 }
 </script>
 
+</body>
 </html>
