--- a/DockerContainers.html
+++ b/DockerContainers.html
@@ -101,59 +101,61 @@
   </section>
 
   <hr/>
-  <footer>
-    <h2>Explore Top Courses for CS Students</h2>
+  <footer class="site-footer">
+  <h2>Explore Top Courses for CS Students</h2>
 
-    <div class="footer-column">
-      <h3>Web & Programming</h3>
-      <ul>
-        <li><a href="HTMLandCSS.html">HTML & CSS</a></li>
-        <li><a href="JavaScript.html">JavaScript</a></li>
-        <li><a href="Python.html">Python Programming</a></li>
-        <li><a href="Java.html">Java Programming</a></li>
-      </ul>
-    </div>
+  <div class="footer-column">
+    <h3>Web & Programming</h3>
+    <ul>
+      <li><a href="HTMLandCSS.html" data-aos="fade-up">HTML & CSS</a></li>
+      <li><a href="JavaScript.html" data-aos="fade-up">JavaScript</a></li>
+      <li><a href="Python.html" data-aos="fade-up">Python Programming</a></li>
+      <li><a href="java.html" data-aos="fade-up">Java Programming</a></li>
+    </ul>
+  </div>
 
-    <div class="footer-column">
-      <h3>Data & AI</h3>
-      <ul>
-        <li><a href="DSA.html">Data Structures & Algorithms</a></li>
-        <li><a href="ML.html">Machine Learning</a></li>
-        <li><a href="DataScience.html">Data Science</a></li>
-        <li><a href="SQLDatabases.html">SQL & Databases</a></li>
-      </ul>
-    </div>
+  <div class="footer-column">
+    <h3>Data & AI</h3>
+    <ul>
+      <li><a href="DSA.html" data-aos="fade-up">Data Structures & Algorithms</a></li>
+      <li><a href="ML.html" data-aos="fade-up">Machine Learning</a></li>
+      <li><a href="DataScience.html" data-aos="fade-up">Data Science</a></li>
+      <li><a href="SQLDatabases.html" data-aos="fade-up">SQL & Databases</a></li>
+    </ul>
+  </div>
 
-    <div class="footer-column">
-      <h3>Cloud & DevOps</h3>
-      <ul>
-        <li><a href="AWSBasics.html">AWS Basics</a></li>
-        <li><a href="DockerContainers.html">Docker & Containers</a></li>
-        <li><a href="LinuxEssentials.html">Linux Essentials</a></li>
-      </ul>
-    </div>
+  <div class="footer-column">
+    <h3>Cloud & DevOps</h3>
+    <ul>
+      <li><a href="AWSBasics.html" data-aos="fade-up">AWS Basics</a></li>
+      <li><a href="DockerContainers.html" data-aos="fade-up">Docker & Containers</a></li>
+      <li><a href="LinuxEssentials.html" data-aos="fade-up">Linux Essentials</a></li>
+    </ul>
+  </div>
 
-    <div class="footer-column">
-      <h3>Other Useful Skills</h3>
-      <ul>
-        <li><a href="GitGitHub.html">Git & GitHub</a></li>
-        <li><a href="ProblemSolving.html">Problem Solving</a></li>
-      </ul>
-    </div>
+  <div class="footer-column">
+    <h3>Other Useful Skills</h3>
+    <ul>
+      <li><a href="GitGitHub.html" data-aos="fade-up">Git & GitHub</a></li>
+      <li><a href="ProblemSolving.html" data-aos="fade-up">Problem Solving</a></li>
+    </ul>
+  </div>
 
-    <div class="footer-column">
-      <h3>Company</h3>
-      <ul>
-        <li><a href="AboutUs.html">About Us</a></li>
-        <li><a href="ContactUs.html">Contact Us</a></li>
-      </ul>
-    </div>
+  <div class="footer-column">
+    <h3>Company</h3>
+    <ul>
+      <li><a href="AboutUs.html" data-aos="fade-up">About Us</a></li>
+      <li><a href="ContactUs.html" data-aos="fade-up">Contact Us</a></li>
+      <li><a href="Terms.html" data-aos="fade-up">Terms of Use</a></li>
+      <li><a href="Privacy.html" data-aos="fade-up">Privacy Policy</a></li>
+    </ul>
+  </div>
 
-    <div class="footer-bottom">
-      <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
-      <span>English</span>
-    </div>
-  </footer>
+  <div class="footer-bottom">
+    <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
+    <span>English</span>
+  </div>
+</footer>
 
   <script>
     AOS.init();
