--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 <hr/>
 
 <nav class="b">
-  <a href="index.html">Home</a> &gt; <span>Featured Free Courses</span>
+  <a href="index.html">Home</a> &gt; 
+  <span>Featured Free Courses</span>
 </nav>
 
 <section class="h">
