--- a/ContactUs.html
+++ b/ContactUs.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact Us - Udemy</title>
-  <link rel="stylesheet" href="a.css">
+  <link rel="stylesheet" href="contactUs.css">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
 
@@ -113,6 +115,9 @@
     <span>English</span>
   </div>
 </footer>
+ <script>
+    AOS.init();
+  </script>
 
 </body>
 </html>
