--- a/Privacy.html
+++ b/Privacy.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="a.css">
-<title>Privacy Policy - Udemy</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Privacy Policy - Udemy</title>
+  <link rel="stylesheet" href="a.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 <body>
 
-
+<!-- Header -->
 <header>
   <div class="header-container">
     <span class="logo"><b>Udemy</b></span>
@@ -21,27 +23,76 @@
     </nav>
   </div>
 </header>
-<hr/>
 
+<!-- Main Content -->
+<main>
+  <section data-aos="fade-up">
+    <h2 style="text-align:center;">Privacy Policy</h2>
+    <p>
+      At Udemy, we value your privacy and are committed to protecting your personal information. This Privacy Policy outlines the types of data we collect, how we use it, and your rights.
+    </p>
+  </section>
 
-<section>
-  <h2 style="text-align:center;">Privacy Policy</h2>
-  <p style="max-width:800px; margin:auto; text-align:justify;">
-    Your privacy is important to us. This policy explains how we collect, use, and protect your data:
-  </p>
-  <ul style="max-width:800px; margin:auto;">
-    <li>We collect basic information like your name and email to create your account and provide services.</li>
-    <li>We do not sell your personal data to third parties.</li>
-    <li>You can request to update or delete your data at any time.</li>
-    <li>We use cookies to improve user experience and understand how our site is used.</li>
-  </ul>
-  <p style="max-width:800px; margin:auto; text-align:justify;">
-    If you have questions about this policy, please contact us at <a href="mailto:privacy@udemy.com">privacy@udemy.com</a>.
-  </p>
-</section>
-<hr/>
+  <section data-aos="fade-up">
+    <h3>1. What Data We Collect</h3>
+    <ul>
+      <li>Personal identification details (Name, Email address, Contact info)</li>
+      <li>Account credentials and user-generated content</li>
+      <li>Browsing activity, device, and technical data</li>
+      <li>Payment information (if applicable) is processed securely through third-party services</li>
+    </ul>
+  </section>
 
+  <section data-aos="fade-up">
+    <h3>2. How We Use Your Information</h3>
+    <ul>
+      <li>To create and manage your account</li>
+      <li>To personalize your learning experience</li>
+      <li>To provide course recommendations and updates</li>
+      <li>To communicate important information and respond to inquiries</li>
+    </ul>
+  </section>
 
+  <section data-aos="fade-up">
+    <h3>3. Cookie Usage</h3>
+    <p>
+      We use cookies and similar technologies to enhance your experience, remember preferences, and understand user behavior to improve our services.
+    </p>
+  </section>
+
+  <section data-aos="fade-up">
+    <h3>4. Third-Party Sharing</h3>
+    <p>
+      We never sell your personal data. We may share limited information with trusted third parties (e.g., analytics providers or payment processors) under strict data protection agreements.
+    </p>
+  </section>
+
+  <section data-aos="fade-up">
+    <h3>5. Data Security</h3>
+    <p>
+      We implement industry-standard measures like encryption, firewalls, and regular security audits to protect your data.
+    </p>
+  </section>
+
+  <section data-aos="fade-up">
+    <h3>6. Your Rights</h3>
+    <ul>
+      <li>Right to access and review your data</li>
+      <li>Right to request updates or deletion of your information</li>
+      <li>Right to withdraw consent at any time</li>
+    </ul>
+  </section>
+
+  <section data-aos="fade-up">
+    <h3>7. Contact Us</h3>
+    <p>
+      If you have any questions or concerns regarding this Privacy Policy, please contact us at 
+      <a href="mailto:privacy@udemy.com">privacy@udemy.com</a>.
+    </p>
+  </section>
+</main>
+
+<!-- Footer -->
 <footer class="site-footer">
   <h2>Explore Top Courses for CS Students</h2>
 
@@ -97,6 +148,10 @@
     <span>English</span>
   </div>
 </footer>
+
+<script>
+  AOS.init();
+</script>
 
 </body>
 </html>
