--- a/Terms.html
+++ b/Terms.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="a.css">
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 <title>Terms of Use - Udemy</title>
 </head>
 <body>
@@ -110,6 +112,10 @@
     <span>English</span>
   </div>
 </footer>
+
+<script>
+  AOS.init();
+</script>
 
 </body>
 </html>
