Initial commit or update

--- a/ProblemSolving.html
+++ b/ProblemSolving.html
@@ -10,18 +10,18 @@
 </head>
 <body>
 
-  <header>
-    <div class="header-container">
-      <span class="logo"><b>Udemy</b></span>
-      <nav class="nav-links">
-        <input class="search" type="text" placeholder="Search About Courses">
-        <a href="courses.html">Explore Courses</a>
-        <a href="login.html">Log in</a>
-        <a href="Signup.html">Register</a>
-        <a href="index.html">Homepage</a>
-      </nav>
-    </div>
-  </header>
+<header>
+  <div class="header-container">
+    <span class="logo"><b>Udemy</b></span>
+    <nav class="nav-links">
+      <input class="search" type="text" placeholder="Search About Courses">
+      <a href="courses.html">Explore Courses</a>
+      <a href="FAQs.html">FAQs</a>
+      <a href="login.html">Log in</a>
+      <a href="Signup.html">Register</a>
+    </nav>
+  </div>
+</header>
 
   <section class="intro" data-aos="fade-up">
     <h2>Problem Solving – MCQ Practice</h2>
