--- a/Python.html
+++ b/Python.html
@@ -9,18 +9,18 @@
   <title>Python Programming - Udemy</title>
 </head>
 <body>
-  <header>
-    <div class="header-container">
-      <span class="logo"><b>Udemy</b></span>
-      <nav class="nav-links">
-        <input class="search" type="text" placeholder="Search About Courses">
-        <a href="courses.html">Explore Courses</a>
-        <a href="login.html">Log in</a>
-        <a href="Signup.html">Register</a>
-        <a href="index.html">Homepage</a>
-      </nav>
-    </div>
-  </header>
+<header>
+  <div class="header-container">
+    <span class="logo"><b>Udemy</b></span>
+    <nav class="nav-links">
+      <input class="search" type="text" placeholder="Search About Courses">
+      <a href="courses.html">Explore Courses</a>
+      <a href="FAQs.html">FAQs</a>
+      <a href="login.html">Log in</a>
+      <a href="Signup.html">Register</a>
+    </nav>
+  </div>
+</header>
   <hr/>
 
   <section data-aos="fade-up">
