--- a/Signup.html
+++ b/Signup.html
@@ -15,9 +15,9 @@
     <nav class="nav-links">
       <input class="search" type="text" placeholder="Search About Courses">
       <a href="courses.html">Explore Courses</a>
+      <a href="FAQs.html">FAQs</a>
       <a href="login.html">Log in</a>
       <a href="Signup.html">Register</a>
-      <a href="index.html">Homepage</a>
     </nav>
   </div>
 </header>
