--- a/Terms.html
+++ b/Terms.html
@@ -10,16 +10,15 @@
 </head>
 <body>
 
-<!-- Header -->
 <header>
   <div class="header-container">
     <span class="logo"><b>Udemy</b></span>
     <nav class="nav-links">
       <input class="search" type="text" placeholder="Search About Courses">
       <a href="courses.html">Explore Courses</a>
+      <a href="FAQs.html">FAQs</a>
       <a href="login.html">Log in</a>
       <a href="Signup.html">Register</a>
-      <a href="index.html">Homepage</a>
     </nav>
   </div>
 </header>
