--- a/courses.html
+++ b/courses.html
@@ -16,10 +16,11 @@
   <div class="header-container">
     <span class="logo"><b>Udemy</b></span>
     <nav class="nav-links">
-      <input type="text" placeholder="Search About Courses">
+      <input class="search" type="text" placeholder="Search About Courses">
+      <a href="courses.html">Explore Courses</a>
+      <a href="FAQs.html">FAQs</a>
       <a href="login.html">Log in</a>
       <a href="Signup.html">Register</a>
-      <a href="index.html">Homepage</a>
     </nav>
   </div>
 </header>
