--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <nav class="nav-links">
       <input class="search" type="text" placeholder="Search About Courses">
       <a href="courses.html">Explore Courses</a>
+      <a href="FAQs.html">FAQs</a>
       <a href="login.html">Log in</a>
       <a href="Signup.html">Register</a>
     </nav>
